@@ -92,3 +92,13 @@ class UndestroyablePirate < ActiveRecord::Base #:nodoc:
     false
   end
 end
+
+class Uuid < ActiveRecord::Base #:nodoc:
+  set_primary_key "uuid"
+  
+  def before_create
+    self.uuid = "295b3430-85b8-012c-cfe4-002332cf7d5e"
+  end
+  
+  is_paranoid
+end
